deployment/account/service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    service.name: account
  name: account
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 3010
    targetPort: 3010
  selector:
    service.name: account
