deployment/account/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: localdomain-account-ingress
  namespace: localdomain
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_method = "OPTIONS") {
          add_header Access-Control-Allow-Origin $http_origin;
          add_header Access-Control-Allow-Credentials "true";
          add_header Access-Control-Allow-Headers "origin,x-requested-with,content-type,accept,$http_access_control_request_headers";
          add_header Access-Control-Allow-Methods "OPTIONS,$http_access_control_request_method";

          add_header Access-Control-Max-Age 1728000;
          add_header Content-Type "text/plain charset=UTF-8";
          add_header Content-Length 0;

          return 204;
      }

      if ($request_method ~ "^(GET|POST|PUT|PATCH|HEAD|DELETE)$") {
          add_header X-Frame-Options SAMEORIGIN;
          add_header X-Content-Type-Options nosniff;
          add_header Strict-Transport-Security "max-age=1296000; includeSubdomains; preload";

          add_header Access-Control-Allow-Origin $http_origin;
          add_header Access-Control-Allow-Credentials "true";
          add_header Access-Control-Allow-Headers "*";
          add_header Access-Control-Allow-Methods "GET,POST,PUT,PATCH,HEAD,DELETE";
      }
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: localdomain-ssl
    hosts:
    - account.localdomain.local
  rules:
  - host: account.localdomain.local
    http:
      paths:
      - path: /
        backend:
          serviceName: account
          servicePort: 3010
